# cuda-quantum

./: .gitmodules
docs/: photonics_kernel.html
docs/sphinx/examples/cpp/providers/: photonics_tbi.cpp
docs/sphinx/examples/python/providers/: photonics_simple.py  photonics_tbi.py
include/cudaq/Frontend/nvqpp/: ASTBridge.h
include/cudaq/Optimizer/: InitAllDialects.h
include/cudaq/Optimizer/Builder/: Factory.h  Runtime.h  RuntimeNames.h
include/cudaq/Optimizer/CodeGen/: Passes.h  Passes.td  QIRFunctionNames.h
include/cudaq/Optimizer/Dialect/CC/: CCTypes.h
include/cudaq/Optimizer/Dialect/QEC/: CMakeLists.txt  QECDialect.h  QECDialect.td  QECOps.h  QECOps.td  QECTypes.td
include/cudaq/Optimizer/Dialect/Quake/: QuakeOps.td
include/cudaq/Optimizer/Transforms/: Passes.td
lib/Frontend/nvqpp/: ASTBridge.cpp  ConvertDecl.cpp  ConvertExpr.cpp  ConvertType.cpp
lib/Optimizer/Builder/: Intrinsics.cpp  Marshal.cpp
lib/Optimizer/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Optimizer/CodeGen/: CMakeLists.txt  ConvertToQIRAPI.cpp  LowerToQIR.cpp  Pipelines.cpp  QIRPatternAnalysis.cpp  QuakeToLLVM.cpp
lib/Optimizer/Dialect/CC/: CCOps.cpp  CCTypes.cpp
lib/Optimizer/Dialect/QEC/: CMakeLists.txt  QECDialect.cpp  QECOps.cpp
lib/Optimizer/Dialect/Quake/: QuakeOps.cpp
lib/Optimizer/Transforms/: CMakeLists.txt  EraseQEC.cpp  EraseQECOps.cpp  ExpandMeasurements.cpp  GenDeviceCodeLoader.cpp  GenKernelExecution.cpp  LowerQECToQIR.cpp  PassDetails.h  Pipelines.cpp
python/: CMakeLists.txt  CUDAQuantumExtension.cpp
python/cudaq/: __init__.py
python/cudaq/kernel/: analysis.py  ast_bridge.py  kernel_builder.py  kernel_decorator.py  utils.py
python/cudaq/photonics/: __init__.py
python/cudaq/runtime/: register_op.py  sample.py
python/experimental/: CMakeLists.txt  CUDAQuantumExtension.cpp
python/experimental/cudaq/: __init__.py
python/experimental/cudaq/kernel/: analysis.py  ast_bridge.py  kernel_builder.py  qubit_qis.py
python/experimental/runtime/cudaq/qis/: py_execution_manager.cpp  py_qubit_qis.cpp
python/experimental/tests/ast/: test_ir_operations.py  test_library_kernels.py
python/experimental/tests/mlir/: conditional.py  control.py  lit.site.cfg.py.in
python/extension/: CUDAQuantumExtension.cpp
python/runtime/cudaq/qed/: CMakeLists.txt  py_error_detect.cpp
python/runtime/cudaq/qis/: py_execution_manager.cpp
python/runtime/mlir/: py_register_dialects.cpp
python/tests/backends/: test_IQM.py  test_IonQ.py  test_QuEra.py  test_Quantinuum.py  test_tii.py
python/tests/custom/: test_custom_operations.py
python/tests/qed/: test_md.py
python/tests/synthesis/: test_custom_op.py
python/utils/: LinkedLibraryHolder.cpp  LinkedLibraryHolder.h
runtime/: CMakeLists.txt  cudaq.h
runtime/common/: BaseRemoteRESTQPU.h  BaseRestRemoteClient.h  CMakeLists.txt  ExecutionContext.h  RecordLogDecoder.cpp  RecordLogDecoder.h  RecordLogParser.cpp  RecordLogParser.h  RuntimeMLIR.cpp  RuntimeMLIR.h
runtime/cudaq/: CMakeLists.txt  cudaq.cpp
runtime/cudaq/algorithms/: policy_dispatch.h  run.cpp  run.h
runtime/cudaq/analysis/: CMakeLists.txt  Dem.cpp  dem.h
runtime/cudaq/platform/: CMakeLists.txt  qpu.h  quantum_platform.cpp  quantum_platform.h
runtime/cudaq/platform/default/: CMakeLists.txt  DefaultQuantumPlatform.cpp
runtime/cudaq/platform/default/rest/: CMakeLists.txt
runtime/cudaq/platform/default/rest/helpers/: CMakeLists.txt
runtime/cudaq/platform/default/rest/helpers/braket/: BraketExecutor.cpp  BraketExecutor.h  BraketServerHelper.cpp  BraketServerHelper.h
runtime/cudaq/platform/default/rest/helpers/quera/: CMakeLists.txt  QuEraServerHelper.cpp
runtime/cudaq/platform/quera/: CMakeLists.txt  QuEraBaseQPU.h  QuEraServerHelper.cpp  ahs_program.h  quera.yml
runtime/cudaq/qed/: CMakeLists.txt  error_detection.h  qpu.cpp  simulator.cpp
runtime/cudaq/qis/: execution_manager.cpp  execution_manager.h  measure_handle.h  measure_result.h  qec_metadata.h  qubit_qis.h
runtime/cudaq/qis/detail/: measure_result_shim.h
runtime/cudaq/qis/managers/default/: DefaultExecutionManager.cpp
runtime/cudaq/utils/: registry.h
runtime/internal/: CMakeLists.txt
runtime/internal/analysis/: CMakeLists.txt  Dem.cpp
runtime/internal/analysis/include/cudaq/analysis/: Dem.h  DemPolicy.h  StimDem.h
runtime/internal/analysis/include/cudaq_internal/analysis/: Dem.h  DemPolicy.h
runtime/internal/compiler/: CMakeLists.txt
runtime/nvqir/: CircuitSimulator.h  NVQIR.cpp
runtime/nvqir/cutensornet/: simulator_mps_register.cpp
runtime/nvqir/stim/: StimCircuitSimulator.cpp  StimMeasurementData.h  StimQECData.h
targettests/execution/: cudaq_qed_md.cpp  cudaq_run_with_args.cpp  custom_operation_3.cpp  qec_cross_round_detectors.cpp  qec_detectors.cpp  qec_qpu_query.cpp  stim_metadata.cpp  trivial_inliner.cpp
test/AST-Quake/: bug_3270.cpp  cudaq_run.cpp  measure_handle.cpp  measure_handle_bool_contexts.cpp  measure_handle_qir.cpp  measure_handle_silent_demotion.cpp  measure_handle_to_integer.cpp  measure_handle_vector_return.cpp  measure_result_assign.cpp  qir_profiles.cpp
test/AST-error/: measure_handle.cpp  measure_handle_unbound_copy.cpp
test/Dialect/QEC/: invalid.qke
test/Quake/: roundtrip-ops.qke
test/Transforms/: cast_fold.qke  expand_measurements_handle.qke  lower_qec_to_qir.qke  qir_api_measure_handle.qke  qir_api_measure_handle_e2e.qke  qir_base_profile.qke
test/Translate/: array_record_insert.qke
tools/cudaq-opt/: CMakeLists.txt
tools/cudaq-translate/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/backends/: CMakeLists.txt
unittests/backends/braket/: BraketTester.cpp
unittests/backends/quera/: JsonPayloadTester.cpp
unittests/common/: MeasureCountsTester.cpp
unittests/integration/: compute_dem_tester.cpp
